# RF_HOG_InstanceClassificationDetection

./: CMakeLists.txt  README.md
Results/: plot.ipynb  plot.py  task2_results.txt  task3(corrected)_Iou0.25_64win_srFeat.txt  task3(corrected_more)_Iou0.25_64win_srFeat.txt  task3(corrected_more_more)_Iou0.25_64win_srFeat.txt  task3(corrected_most)_Iou0.25_64win_srFeat.txt  task3_Iou0.25_64win_allFeat.txt  task3_Iou0.25_64win_origData.txt  task3_Iou0.25_64win_srFeat.txt
data/task3/: README.md
include/: BaggingTrees.h  helper.h  visual_hog.h
src/: BaggingTrees.cpp  ImgAugmentation.py  SelectiveSearch.cpp  helper.cpp  task1.cpp  task2.cpp  task3.cpp  visual_hog.cpp
